2008-03-23  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/layout.R (layout.fruchterman.reingold) :
	add 'miny' and 'maxy' parameters
	(layout.kamada.kawai) : add 'fixz' parameter
	* interfaces/R/src/rinterface.c.in (R_igraph_layout_kamada_kawai)
	(R_igraph_layout_kamada_kawai_3d) : added 'fixz' argument
	(R_igraph_layout_fruchterman_reingold) : added 'miny' and 'maxy' 
	arguments

2008-02-24  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/layout.R (layout.reingold.tilford)
	* interfaces/R/src/rinterface.c.in (R_igraph_layout_reingold_tilford) :
	'root' can be a vector now, 'mode' & 'rootlevel' parameter added
 
2008-02-22  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/plot.R (plot.igraph) : plot edge labels
	at one third of the edge to allow better plotting of mutual edges

2008-02-21  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/conversion.R (igraph.from.graphNEL)
	(igraph.to.graphNEL)
	* interfaces/R/src/rinterface.c.in (R_SEXP_to_igraph_adjlist) : added

2008-02-18  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/plot.shapes.R : handle graphs which contain 
	no edges at all

2008-02-17  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/plot.shapes.R
	* interfaces/R/igraph/R/plot.common.R
	* interfaces/R/igraph/R/plot.R (plot.igraph) : vertex shapes added,
	some interface cleanup might be needed

2008-02-16  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/structural.properties.R (shortest.paths)
	* interfaces/R/src/rinterface.c.in (R_igraph_shortest_paths):
	weights added, we always call the weighted version, there is a 
	fallback in that anyway

2008-02-09  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/flow.R (graph.maxflow, graph.mincut) : allow
	capacity to be NULL
	* interfaces/R/src/rinterface.c.in (R_igraph_maxflow)
	(R_igraph_mincut, R_igraph_mincut_value, R_igraph_st_mincut_value) : 
	updated
